--- a/configs/demoire/cross-dataset/mbcnn/uhdm/cd_unidemoire_mbcnn_uhdm.yaml
+++ b/configs/demoire/cross-dataset/mbcnn/uhdm/cd_unidemoire_mbcnn_uhdm.yaml
@@ -45,10 +45,10 @@ data:
       params: 
         args:
           natural_dataset_name: UHDM
-          uhdm_dataset_path: /inspurfs/group/mayuexin/yangzemin/data/uhdm_data/train
-          fhdmi_dataset_path: /inspurfs/group/mayuexin/yangzemin/data/fhdmi_data/train
-          tip_dataset_path: /inspurfs/group/mayuexin/yangzemin/data/tip2018/train
-          moire_pattern_path: /inspurfs/group/mayuexin/yangzemin/data/generated/fake_ready5
+          uhdm_dataset_path: # Please set the path to your moire pattern dataset
+          fhdmi_dataset_path: # Please set the path to your moire pattern dataset
+          tip_dataset_path: # Please set the path to your moire pattern dataset
+          moire_pattern_path: # Please set the path to your moire pattern dataset
           loader: crop
           crop_size: 384
         paired: True
@@ -58,7 +58,7 @@ data:
     #   target: unidemoire.data.uhdm.uhdm_datasets
     #   params:
     #     args:
-    #       dataset_path: /inspurfs/group/mayuexin/yangzemin/data/uhdm_data/test
+    #       dataset_path: # Please set the path to your moire pattern dataset
     #       LOADER: default
     #     mode: test
 
@@ -66,7 +66,7 @@ data:
     #   target: unidemoire.data.fhdmi.fhdmi_datasets
     #   params:
     #     args:
-    #       dataset_path: /inspurfs/group/mayuexin/yangzemin/data/fhdmi_data/test
+    #       dataset_path: # Please set the path to your moire pattern dataset
     #       LOADER: default
     #     mode: test       
 
@@ -74,7 +74,7 @@ data:
       target: unidemoire.data.tip.tip_datasets
       params:
         args:
-          dataset_path: /inspurfs/group/mayuexin/yangzemin/data/tip2018/test
+          dataset_path: # Please set the path to your moire pattern dataset
           LOADER: default
         mode: test      
 
